2005-04-02  Tom Tromey  <tromey@redhat.com>

	* builtins.cc (lay_out_vtable): Compute class reference.

2005-04-02  Tom Tromey  <tromey@redhat.com>

	* treegen.cc (generate): Don't let -1 line number slip through.
	* tree.cc (annotate): Do nothing with negative line number.

2005-04-02  Tom Tromey  <tromey@redhat.com>

	* hooks.hh (type_catch_class): Declare.
	* decl.cc (build_catch_class_type): New function.
	(initialize_decls): Call it.
	(type_catch_class): New global.
	* classobj.hh (class_object_creator::compute_catch_classes):
	Declare.
	* classobj.cc (compute_catch_classes): New method.
	(create_class_instance): Use it.
	* tree.cc (visit_catch): Use map_catch_class.
	* builtins.cc (map_catch_class): New method.
	(get_catch_map): Likewise.
	* builtins.hh (tree_builtins::catch_map): New field.
	(tree_builtins::catch_map_type): Declare.
	(tree_builtins::map_catch_class): Declare.
	(tree_builtins::get_catch_map): Likewise.

2005-03-29  Tom Tromey  <tromey@redhat.com>

	* builtins.cc: Include util.h.
	(hash_utf8): Use UTF8_GET.
	* util.h (append_gpp_mangled_name): Wrap in 'extern "C"'.

2005-03-29  Tom Tromey  <tromey@redhat.com>

	* util.h: Changed header guard names.
	* treegen.hh: Changed header guard names.
	* hooks.hh: Changed header guard names.
	* glue.hh: Changed header guard names.
	* classobj.hh: Changed header guard names.
	* builtins.hh: Changed header guard names.
	* abi.hh: Changed header guard names.
	* tree.hh: Changed header guard names.

2005-03-29  Tom Tromey  <tromey@redhat.com>

	* jvgenmain.c: Include util.h, not jcf.h or java-tree.h.
	* mangle_name.c: Include util.h, not jcf.h or java-tree.h.
	* util.h: New file.

2005-03-29  Tom Tromey  <tromey@redhat.com>

	* abi.cc (build_method_call): New stubs.
	(build_field_reference): Likewise.
	* abi.hh (gcj_abi::build_method_call): Declare new overload.
	(gcj_abi::build_field_reference): Likewise.
	(cxx_abi::build_method_call): Declare.
	(cxx_abi::build_field_reference): Likewise.